<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flowScrollView"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/userName"
                android:text="@string/actual_name"
                android:layout_marginTop="40px"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="BIO:"
                    android:textSize="16dp"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="10px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/bio"
                    android:text="@string/bio"
                    android:layout_marginTop="20px"
                    android:layout_marginLeft="40px"
                    android:layout_marginRight="10px"
                    android:textSize="16dp"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:text="Edit"
                android:layout_width="200px"
                android:layout_height="150px"
                android:layout_gravity="center"
                android:layout_marginTop="40px"
                android:onClick="goToEdit"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40px"
                android:background="@android:color/darker_gray"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40px"
                android:progressDrawable="@android:drawable/progress_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="10"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/levelNum"
                    android:text="@string/levelNum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/levelScore"
                    android:text="@string/levelScore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/yourProgress"
                android:text="@string/progressString"
                android:layout_marginTop="40px"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

            <TextView
                android:id="@+id/ia"
                android:text="@string/ia"
                android:layout_marginTop="40px"
                android:layout_marginLeft="150px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ProgressBar
                android:id="@+id/d1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="200"
                />

            <TextView
                android:id="@+id/gm"
                android:text="@string/gm"
                android:layout_marginTop="40px"
                android:layout_marginLeft="150px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ProgressBar
                android:id="@+id/d2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="130"
                android:progressTint="#FF8000"
                />

            <TextView
                android:id="@+id/scic"
                android:text="@string/scic"
                android:layout_marginTop="40px"
                android:layout_marginLeft="150px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ProgressBar
                android:id="@+id/d3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="10"
                android:progressTint="#CC66FF"
                />

            <TextView
                android:id="@+id/ppe"
                android:text="@string/ppe"
                android:layout_marginTop="40px"
                android:layout_marginLeft="150px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ProgressBar
                android:id="@+id/d4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="350"
                android:progressTint="#00FFFF"
                />

            <TextView
                android:id="@+id/wb"
                android:text="@string/wb"
                android:layout_marginTop="40px"
                android:layout_marginLeft="150px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ProgressBar
                android:id="@+id/d5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:max="500"
                android:progress="350"
                android:progressTint="#66FF66"
                />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RECOMMENDED OPPORTUNITIES:"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20px"
                android:background="@android:color/darker_gray"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/scrollView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    >
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20px"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

