<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="com.example.chinmayee.mainactivity.EditProfile"

    tools:showIn="@layout/activity_edit_profile">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profimg2"
                    />
                <Button
                    android:id="@+id/changeDp"
                    android:text="Choose Photo"
                    android:layout_width="500px"
                    android:layout_height="130px"
                    android:layout_gravity="center"
                    android:layout_marginTop="40px"/>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40px"
                android:background="@android:color/darker_gray"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <TextView
                    android:id="@+id/fname"
                    android:text="@string/fname"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="40px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <EditText android:id="@+id/edit_message"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="20px"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_fname" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <TextView
                    android:id="@+id/lname"
                    android:text="@string/lname"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="40px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <EditText android:id="@+id/edit_message_lname"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="20px"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_lname" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <TextView
                    android:id="@+id/bio"
                    android:text="@string/biolabel"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="40px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <EditText android:id="@+id/edit_message_bio"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="51dp"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bio" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40px"
                android:background="@android:color/darker_gray"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <TextView
                    android:id="@+id/visibility"
                    android:text="@string/visibility"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="40px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <Spinner
                    android:id="@+id/static_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40px"
                    android:layout_marginLeft="20px"
                    android:textSize="10dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40px"
                android:background="@android:color/darker_gray"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit_profile">
                <Button
                    android:id="@+id/saveMsg"
                    android:text="Save"
                    android:layout_width="300px"
                    android:layout_height="150px"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40px"/>
                <Button
                    android:id="@+id/cancelMsg"
                    android:text="Cancel"
                    android:layout_width="300px"
                    android:layout_height="150px"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40px"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
