<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.chinmayee.mainactivity.OppDetail"
    tools:showIn="@layout/activity_opp_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:id="@+id/image"

                    android:background="@drawable/hi"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <ImageButton
                    android:id="@+id/favorite_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:background="#00ffffff"
                    android:layout_alignTop="@+id/image"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppDate"
                android:text="@string/oppDate"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppName"
                android:text="@string/oppName"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DECRIPTION:"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppDes"
                android:text="@string/oppDes"
                android:layout_marginTop="10px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOCATION:"
                android:layout_marginTop="15px"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppLoc"
                android:text="@string/oppLoc"
                android:layout_marginTop="10px"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="400dp"
                android:layout_height="100dp"
                tools:context="com.example.chinmayee.mainactivity.MapFragment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONTACT:"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppContact"
                android:layout_marginTop="10px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ATTENDEES:"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/attendeesList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5px"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/e1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10px"
                        android:layout_marginLeft="20px"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profimg2" />

                        <TextView
                            android:id="@+id/a1Name"
                            android:layout_marginTop="10px"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a1Name"
                            android:textSize="10dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/e2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10px"
                        android:layout_marginLeft="20px"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profimg2" />

                        <TextView
                            android:id="@+id/a2Name"
                            android:layout_marginTop="10px"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a2Name"
                            android:textSize="10dp"
                            />

                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RECOMMENDATION OPPORTUNITIES:"
                android:layout_marginTop="15px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="10px"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20px"
                android:background="@android:color/darker_gray"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/scrollView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    >
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20px"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
